# micro-llm

./: Cargo.toml  README.md
.github/workflows/: build-tokenizer.yml
crates/micro_backend/: Cargo.toml
crates/micro_backend/src/: dim.rs  lib.rs  load.rs  store.rs  tensors.rs
crates/micro_backend_cpu/: Cargo.toml
crates/micro_backend_cpu/src/: lib.rs  loader.rs  store.rs  tensor.rs
crates/micro_executor/: Cargo.toml
crates/micro_executor/src/: bf16_wrapper.rs  f16_wrapper.rs  lib.rs  load.rs  model.rs  nn.rs
crates/micro_executor/src/model/: llama.rs  llama_old.rs
crates/micro_executor/src/nn/: embedding.rs  gelu.rs  layer_norm.rs  linear.rs  ndarray.rs  rms_norm.rs  silu.rs  softmax.rs
crates/micro_executor/src/nn/ndarray/: embedding.rs  gelu.rs  linear.rs  multinomial.rs  rms_norm.rs  silu.rs  softmax.rs
crates/micro_tokenizer/: Cargo.toml
crates/micro_tokenizer/src/: hf.rs  lib.rs  tokenizer.rs
crates/micro_utils/: Cargo.toml
crates/micro_utils/src/: lib.rs  pausable.rs
examples/: tokenizer.rs
src/: main.rs
