[package]
name = "micro-llm"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = [
    "crates/*"
]

[dependencies]
micro_tokenizer = { path = "crates/micro_tokenizer", features = ["hf"] }


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1


[[example]]
name = "tokenizer"
path = "examples/tokenizer.rs"